--- a/apps/account-api/api.html
+++ b/apps/account-api/api.html
@@ -364,7 +364,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/account-api/commit/acf9533befb45fd8d338e6ce3946e91aba7f95da">3 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/account-api/commit/3293d2087143e3f68c02355856a35c83f4c7db56">3 Jun 2021</a>
 </div>
 
   <h1 class="page-title">account-api: API documentation</h1>
@@ -398,6 +398,7 @@ management. This API is not for other government services.</p>
 <li><a href="#get-apioauth2sign-in"><code>GET /api/oauth2/sign-in</code></a></li>
 <li><a href="#post-apioauth2callback"><code>POST /api/oauth2/callback</code></a></li>
 <li><a href="#post-apioauth2state"><code>POST /api/oauth2/state</code></a></li>
+<li><a href="#get-apiuser"><code>GET /api/user</code></a></li>
 <li><a href="#get-apiattributes"><code>GET /api/attributes</code></a></li>
 <li><a href="#patch-apiattributes"><code>PATCH /api/attributes</code></a></li>
 <li><a href="#get-apiattributesnames"><code>GET /api/attributes/names</code></a></li>
@@ -704,6 +705,77 @@ end
 <p>Response:</p>
 <pre lang="json"><code>{
     "state_id": "5821a9f9-3ba7-4385-a864-80cdb374550a"
+}
+</code></pre>
+<h3 id="get-apiuser"><code>GET /api/user</code></h3>
+<p>Retrieves the information needed to render the <code>/account/home</code> page.</p>
+<h4 id="request-headers">Request headers</h4>
+<ul>
+<li>
+<code>GOVUK-Account-Session</code>
+<ul>
+<li>the user's session identifier</li>
+</ul>
+</li>
+</ul>
+<h4 id="json-response-fields">JSON response fields</h4>
+<ul>
+<li>
+<code>level_of_authentication</code>
+<ul>
+<li>the user's current level of authentication (<code>level0</code> or <code>level1</code>)</li>
+</ul>
+</li>
+<li>
+<code>email</code>
+<ul>
+<li>the user's current email address</li>
+</ul>
+</li>
+<li>
+<code>email_verified</code>
+<ul>
+<li>whether the user has confirmed their email address or not</li>
+</ul>
+</li>
+<li>
+<code>services</code>
+<ul>
+<li>object of known services, keys are service names and values are one of:
+<ul>
+<li>
+<code>yes</code>: the user has used the service and can use it now</li>
+<li>
+<code>yes_but_must_reauthenticate</code>: the user has used the service but must reauthenticate at a higher level to use it now</li>
+<li>
+<code>no</code>: the user has not used the service</li>
+<li>
+<code>unknown</code>: the user is not authenticated at a high enough level to check whether they have used the service or not</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h4 id="response-codes">Response codes</h4>
+<ul>
+<li>401 if the session identifier is invalid</li>
+<li>200 otherwise</li>
+</ul>
+<h4 id="example-request-response">Example request / response</h4>
+<p>Request (with gds-api-adapters):</p>
+<pre lang="ruby"><code>GdsApi.account_api.get_user(
+    govuk_account_session: "session-identifier",
+)
+</code></pre>
+<p>Response:</p>
+<pre lang="json"><code>{
+    "level_of_authentication": "level0",
+    "email": "email@example.com",
+    "email_verified": false,
+    "services": {
+        "transition_checker": "yes_but_must_reauthenticate",
+        "saved_pages": "yes"
+    }
 }
 </code></pre>
 <h3 id="get-apiattributes"><code>GET /api/attributes</code></h3>
