--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.havant.gov.uk" class="govuk-link">Havant Borough Council</a></li>
-      <li><a href="http://www.hounslow.gov.uk" class="govuk-link">London Borough of Hounslow Council</a></li>
-      <li><a href="http://www.bristol.gov.uk" class="govuk-link">Bristol City Council</a></li>
-      <li><a href="https://www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/" class="govuk-link">Talking therapy - NHS</a></li>
-      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
-      <li><a href="https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/" class="govuk-link">Book a coronavirus vaccination - NHS</a></li>
-      <li><a href="https://ve-vjday75.gov.uk/" class="govuk-link">VE Day and VJ Day: Marking 75 years since the end of the Second World War</a></li>
-      <li><a href="http://www.eden.gov.uk/" class="govuk-link">Eden District Council</a></li>
-      <li><a href="http://www.eastrenfrewshire.gov.uk" class="govuk-link">East Renfrewshire Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
+      <li><a href="http://www.charnwood.gov.uk" class="govuk-link">Charnwood Borough Council</a></li>
+      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="http://www.mendip.gov.uk" class="govuk-link">Mendip District Council</a></li>
+      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
+      <li><a href="http://www.plymouth.gov.uk" class="govuk-link">Plymouth City Council</a></li>
+      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
+      <li><a href="http://www.powys.gov.uk" class="govuk-link">Powys County Council</a></li>
+      <li><a href="http://www.hertsmere.gov.uk/" class="govuk-link">Hertsmere Borough Council</a></li>
+      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
+      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
