--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttps//gov.wales/covid-19-alert-levels">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
-<li><a href="https://www.gov.ukhttp//www.centralbedfordshire.gov.uk/">Central Bedfordshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.liverpool.gov.uk">Liverpool City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.eden.gov.uk/">Eden District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.selby.gov.uk">Selby District Council</a></li>
-<li><a href="https://www.gov.ukhttp//ec.europa.eu/citizens-initiative">The European Citizens&rsquo; Initiative</a></li>
-<li><a href="https://www.gov.ukhttp//www.crawley.gov.uk">Crawley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/">Care homes - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.south-ayrshire.gov.uk">South Ayrshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.harborough.gov.uk">Harborough District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southbucks.gov.uk">South Bucks District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bristol.gov.uk">Bristol City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.redbridge.gov.uk/">London Borough of Redbridge Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.cookstown.gov.uk/">Cookstown District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.warwickshire.gov.uk/">Warwickshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/">Book a coronavirus vaccination - NHS</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
